--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,6 +1,8 @@
 {
     "compilerOptions": {
         "target": "ES6",
-        "checkJs": true
+        "checkJs": true,
+        "strict": true,
+        "strictNullChecks": false,
     },
 }
