--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
         {
             "label": "Build index.html",
             "type": "shell",
-            "command": "npx liquidjs --jekyll-include --template '@Main.html' --output ../build.html",
+            "command": "npx liquidjs -t '@Main.html' -o ../build.html --jekyll-include --no-dynamic-partials",
             "options": {
                 "cwd": "${workspaceFolder}/_includes"
             },
