--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,7 +6,7 @@
             "type": "firefox",
             "request": "launch",
             "reAttach": true,
-            "file": "${workspaceFolder}/build.html",
+            "file": "${workspaceFolder}/index.html",
         },
         {
             "name": "Attach Firefox",
