--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,12 +1,9 @@
 {
     "env": {
         "browser": true,
-        "es6": true
+        "es2017": true
     },
     "extends": "eslint:recommended",
-    "parserOptions": {
-        "ecmaVersion": 6
-    },
     "rules": {
         "no-undef": "off",
         "no-unused-vars": "off",
@@ -18,8 +15,7 @@
         {
             "files": ["build.mjs"],
             "parserOptions": {
-                "sourceType": "module",
-                "ecmaVersion": "latest"
+                "sourceType": "module"
             }
         }
     ]
