--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,7 +8,7 @@
         "no-undef": "off",
         "no-unused-vars": "off",
         "no-var": "error",
-        "semi": "error",
+        "semi": ["error", "never"],
         "strict": ["error", "global"]
     },
     "overrides": [
