Use NPM build script

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -2,12 +2,8 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "label": "Build index.html",
-            "type": "shell",
-            "command": "node build.mjs",
-            "options": {
-                "cwd": "${workspaceFolder}"
-            },
+            "type": "npm",
+            "script": "build",
             "group": {
                 "kind": "build",
                 "isDefault": true,
