Update ESLint / TypeScript config

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,13 +5,15 @@
     },
     "extends": "eslint:recommended",
     "rules": {
-        "no-undef": "off",
-        "no-unused-vars": "off",
         "no-var": "error",
-        "semi": ["error", "never"],
         "curly": "error",
         "strict": ["error", "global"],
-        "no-trailing-spaces": "error"
+        // Deprecated stylistic rules (TODO)
+        "semi": ["error", "never"],
+        "no-trailing-spaces": "error",
+        // TypeScript handles these:
+        "no-undef": "off",
+        "no-unused-vars": "off"
     },
     "overrides": [
         {
