Allow building app with version string

--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '18.x'
-      - run: node build.mjs
+      - run: node build.mjs ${{ github.sha }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
