Convert UI code to ES6 Modules

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,11 +3,15 @@
         "browser": true,
         "es2017": true
     },
+    "parserOptions": {
+        "sourceType": "module"
+    },
     "extends": "eslint:recommended",
     "rules": {
         "no-var": "error",
         "curly": "error",
         "strict": ["error", "global"],
+		"no-restricted-globals": ["error", "length"],
         // Deprecated stylistic rules (TODO)
         "semi": ["error", "never", {"beforeStatementContinuationChars": "always"} ],
         "no-extra-semi": "off",
