Add TypeScript dev dependency

--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-/.vscode/settings.json
+# Dotfiles
+/.*
+!/.gitignore
+!/.editorconfig
+!/.eslintrc.json
+!/.htmlhintrc
+!/.github/
+
+/node_modules/
