--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -32,6 +32,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
+      - run: npm ci
+      - run: npm run types
       - run: node build.mjs ${{ github.sha }}
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
