--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+	"devDependencies": {
+		"typescript": "^5.8.3"
+	},
     "scripts": {
+		"types": "tsc --project ./jsconfig.json --pretty false",
+		"lint": "eslint .",
+		"check": "npm run types && npm run lint",
         "build": "node build.mjs"
     }
 }
