--- a/.editorconfig
+++ b/.editorconfig
@@ -10,5 +10,7 @@ insert_final_newline = true
 trim_trailing_whitespace = true
 
 [*.yml]
-indent_style = space
+indent_size = 2
+
+[*.html]
 indent_size = 2
