Add background-color and theme-color

--- a/manifest.json
+++ b/manifest.json
@@ -8,5 +8,7 @@
             "src": "https://chroma.zone/share/icon256.png",
             "sizes": "256x256"
         }
-    ]
+    ],
+	"background_color": "#000000",
+	"theme_color": "#000000"
 }
