--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -33,8 +33,8 @@ jobs:
         with:
           node-version: '20.x'
       - run: npm ci
-      - run: npm run types
       - run: node build.mjs ${{ github.sha }}
+      - run: npm run check
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
