--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.0",
+        "eslint": "^8.0.0"
     },
     "scripts": {
         "types": "tsc --project ./jsconfig.json --pretty false",
