--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -34,8 +34,7 @@ jobs:
           node-version: '20.x'
       - run: npm ci
       - run: echo "${{ github.sha }}" > version
-      - run: node build.mjs
-      - run: npm run check
+      - run: make
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
