--- a/package.json
+++ b/package.json
@@ -5,8 +5,6 @@
     },
     "scripts": {
         "types": "tsc --project ./jsconfig.json --pretty false",
-        "lint": "eslint .",
-        "check": "npm run types && npm run lint",
-        "build": "node build.mjs"
+        "lint": "eslint ."
     }
 }
