--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
     "devDependencies": {
-        "typescript": "^5.8.0",
-        "eslint": "^8.0.0"
+        "@eslint/js": "^9.31.0",
+        "eslint": "^9.31.0",
+        "typescript": "^5.8.0"
     },
     "scripts": {
         "types": "tsc --project ./jsconfig.json --pretty false",
