--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "devDependencies": {
         "@eslint/js": "^9.31.0",
+        "@stylistic/eslint-plugin": "^5.2.0",
         "eslint": "^9.31.0",
         "typescript": "^5.8.0"
     },
