--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
     "devDependencies": {
+        "@eslint/css": "^0.10.0",
         "@eslint/js": "^9.32.0",
         "eslint": "^9.32.0",
         "typescript": "^5.9.0"
