--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
     "devDependencies": {
         "@eslint/css": "^0.10.0",
         "@eslint/js": "^9.32.0",
+        "esbuild": "^0.25.0",
         "eslint": "^9.32.0",
         "typescript": "^5.9.0"
     },
     "scripts": {
         "types": "tsc --project ./jsconfig.json --pretty false",
-        "lint": "eslint ."
+        "lint": "eslint .",
+        "build": "esbuild src/Main.js --bundle --minify --target=es2020 --outfile=build/bundle.js --log-override:empty-import-meta=silent"
     }
 }
