--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "scripts": {
         "types": "tsc --project ./jsconfig.json --pretty false",
         "lint": "eslint .",
-        "build": "esbuild src/Main.js --bundle --minify --target=es2020 --outfile=build/bundle.js --log-override:empty-import-meta=silent"
+        "build-js": "esbuild src/Main.js --bundle --minify --target=es2020 --outfile=build/bundle.js --log-override:empty-import-meta=silent",
+        "build-css": "esbuild src/Main.css --bundle --minify --outfile=build/bundle.css"
     }
 }
