--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -34,7 +34,7 @@ jobs:
           node-version: '20.x'
       - run: npm ci
       - run: echo "${{ github.sha }}" > commit
-      - run: make
+      - run: make release
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
