--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
         "@eslint/js": "^9.34.0",
         "esbuild": "^0.25.0",
         "eslint": "^9.34.0",
+        "eslint-plugin-compat": "^6.0.0",
         "typescript": "^5.9.0"
     },
     "browserslist": [
