--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "devDependencies": {
         "@eslint/css": "^0.11.0",
         "@eslint/js": "^9.36.0",
+        "@html-eslint/eslint-plugin": "^0.47.0",
         "esbuild": "^0.25.0",
         "eslint": "^9.36.0",
         "eslint-plugin-compat": "^6.0.0",
