--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -1,9 +1,8 @@
 name: Build app
 
 on:
-  # Runs on pushes targeting the default branch
+  # Runs on pushes to any branch
   push:
-    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -41,6 +40,7 @@ jobs:
           # Upload entire repository
           path: '.'
   deploy:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-latest
     needs: build
     environment:
