--- a/.github/workflows/build-index.yml
+++ b/.github/workflows/build-index.yml
@@ -40,7 +40,7 @@ jobs:
           # Upload entire repository
           path: '.'
   deploy:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/alpha'
     runs-on: ubuntu-latest
     needs: build
     environment:
